# pomowork-v2

./: .gitignore  CHANGELOG  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: automatic-releases.yml  python-app.yml  release.yml
app/: CHANGELOG  config.py  main.py  pomowork.py
app/config/: __init__.py  theme.py  user_conf.toml
app/data/: auth.py  cache.py  datahandlers.py  datasend.py  oauth2.py  security.py
app/lib/: models.py  views.py
app/utils/: __init__.py  cards.py  infomessage.py  pendingcom.py
app/utils/auth/: __init__.py  credentials.py  login.py  signup.py
app/views/: changelog.py  timer.py  utils.py
app/views/auth/: login.py  signup.py
app/views/main/: config.py  configframe.py  home.py
app/views/main/frames/: __init__.py  cards.py  main.py  projects.py
