[metadata]
name = Pomowork
version = attr: app.config._VERSION
author = Gustavo de los Santos
author_email = gustleo.dev@gmail.com
description = A simple app to manage pomodoros and money
long_description = file: README.md
licence = GPL-3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires = 
  requests
  certifi
  cffi
  charset-normalizer
  cryptography
  customtkinter
  darkdetect
  dbus-python
  idna
  plyer
  pycparser
  tomlkit
  urllib3
  importlib-metadata; python_version<"3.8"
